# srs-gen2

./: .env.example  .gitignore  AGENTS.md  README.md  batch_run.py  config.py  config.yaml  config.yaml.example  eval_batch_outputs.py  main.py  models.py  openai_utils.py  pyproject.toml  srs_pipeline.py  statistics_iter.py  statistics_iter8.py
.req/: REQ.md  REQ2.md  REQ3.md
prompts/en/: requirement_clarifier.md  requirement_explorer.md  requirement_improver.md  split_to_semantic_units.md  srs_generator.md
prompts/zh/: requirement_clarifier.md  requirement_explorer.md  requirement_improver.md  split_to_semantic_units.md  srs_generator.md
test/: 测试命令.sh
test/script/: eval_batch_outputs.py  find_min_iter5.py  find_optimal_weights_minimal.py  fine_tune_weights_minimal.py  generate_all_weighted_summaries.py  generate_best_weight_summary_minimal.py  generate_weighted_summary.py  statistics_iter8.py  test_vector_dimension.py  test_weight_adjustment.py  test_weight_adjustment_minimal.py  weight_adjustment_summary.md  weight_optimization_report.md  weight_optimization_test.py  weight_test_report.txt  weight_test_report_minimal.md  weight_test_summary_minimal.py
utils/: __init__.py  token_counter.py
