[project]
name = "srs-gen2"
version = "0.1.0"
description = "多版本 SRS 生成器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "models.py",
    "openai_utils.py",
    "srs_pipeline.py",
    "config.py",
    "config.yaml",
    "config.yaml.example",
    "prompts",
]
